@@ -22,6 +22,9 @@ Version 0.9
 
 - Greatly improved the Haskell and OCaml lexers.
 
+- The C# and Java lexers exhibited abysmal performance with some
+  input code; this should now be fixed.
+
 - Improved the Bash lexer.
 
 - Added a Vim 7-like style.
